Fixed .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 css/desktop_sizes.css
-/mobile_landscape.css
-/mobile_portrait.css
-/index.css
-/variables.css
+css/mobile_landscape.css
+css/mobile_portrait.css
+css/index.css
+css/variables.css
