--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,36 +1,11 @@
-name: Robot Framework - Python
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
- 
-permissions:
-  contents: read
- 
-jobs:
-  test:
+robot_test:
     runs-on: ubuntu-latest
-     
+    name: Run Robot Framework Tests
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python 3.12.1
-        uses: actions/setup-python@v3
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Robot Framework
+        uses: joonvena/robotframework-docker-action@v1.0
         with:
-          python-version: 3.12.1
-   
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install robotframework
-          pip install robotframework-seleniumlibrary
-   
-      - name: Test with RobotFramework
-        run: robot .  
-         
-      - name: Test Report Generation
-        uses: actions/upload-artifact@v4
-        if: success() || failure()
-        with:
-          name: Report                # Name of the folder
-          path: report.html           # Path to test results
+          browser: 'firefox'
+          robot_threads: 2
