--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,7 +35,7 @@ jobs:
           run: |
             docker run \
               -v ${PWD}/tests/Reports:/opt/robotframework/reports:Z \
-              -v ${PWD}/tests/Tests:/opt/robotframework/tests:Z \
+              -v ${PWD}/tests:/opt/robotframework/tests:Z \
               --user $(id -u):$(id -g) \
               ppodgorsek/robot-framework:latest
         # upload test reports as a zip file
